--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "jest": "^27.5.1",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
   }
 }
